--- a/Demos/Demos/Classes/OC与JS交互Demo/Model/JS与OC交互Demo.html
+++ b/Demos/Demos/Classes/OC与JS交互Demo/Model/JS与OC交互Demo.html
@@ -5,16 +5,22 @@
     <title></title>
 
     <script type="text/javascript">
-//         窗口提示
+        
+        //添加到购物车
+        function goCart(){
+            // 自己定义的URL
+            window.location.href = "cart:///buy/iPhone56/10000";
+        }
+        // 窗口提示
         function alertMessage(){
             alert("点击了我");
         }
-//        求和运算函数
+        // 求和运算函数
         function sum(a,b){
             alert(a+b);
             return a+b
         }
-//        跳转网页
+        // 跳转网页
         function goMyPage(){
             window.location.href = "http://www.jianshu.com/users/5ec5747435a2/latest_articles";
         }
@@ -27,7 +33,7 @@
     <br/>
     <br/>
     <br/>
-    iPhone 56 <input type="button" value="点击加入购物车" />
+    iPhone 56 <input type="button" value="点击加入购物车" onclick="javascript:goCart()"/>
 
     <div style="color: red">
         点击加入购物车,在App中跳转新页面<br/>
@@ -40,7 +46,6 @@
     <hr/>
     <input type="button" value="计算:10+21=?" onclick="javascript:sum(10,21);"/>
     <hr/>
-
 
 </body>
 </html>
